samples/_failures_safe/1761165923_61c246_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2ddc6ca4.c: In function ‘main’:
./samples/SAFE/__tmp_2ddc6ca4.c:172:5: error: expected expression at end of input
  172 |     while (
      |     ^~~~~
./samples/SAFE/__tmp_2ddc6ca4.c:172:5: error: expected declaration or statement at end of input
